fix: multiple scrollbar issue

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,8 +3,9 @@
 #app {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 1rem;
   font-weight: normal;
+  overflow: hidden;
 }
 
 a,
@@ -18,18 +19,5 @@ a,
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
